UCDetector 1.5.0 from 2010-:
Bugfixes:
 - [ 2922801 ] Quick fix exception on enum declaration 
 - [ 2968753 ] protected abstract method cannot be made private
 - [ 2986496 ] Marker don't disappear when deleting a complete line
 - [ 2996487 ] Applying quick fix scrolls page
 

New features:
 - [ 2929828 ] Added filter to exclude classes extending/implementing
 - [ 2923567 ] Do not report markers for deprecated class members
               TODO: Ignore all children for a class
 - Added cycle detection again, improved cycle view
 - text report
 - Detection modes
 - better preferences
 
// -----------------------------------------------------------------------------
UCDetector 1.4.0 from 2010-01-03:
Bugfixes:
 - [ PerformanceBug ] UCDetector is now 2 times faster, because SearchScope is sources now.
 - [ 2911486 ] QuickFix doesn't modify code
 - [ 2900561] Enum constant detection now also searches for values() and valueOf()

New features:
 - Improved QuickFixes
 - Improved HTML/XML report
 - Added a new TodoQuickFix

// -----------------------------------------------------------------------------
UCDetector 1.3.0 from 2009-10-25:
Bugfixes:
 - [ 2826205 ] Can't make interface methods final
 - [ 2826216 ] Unused interface methods are not detected
 - [ 2804064, 2865051, 2743908 ]
              Access to enclosing type - make 2743908 configurable: Created new Checkbox
 - [ 2864046 ] Ignore public methods of non-public classes
-  [ 2864967 ] Ignore references for recursive methods

New features:
 - New preference: 'ignore Classes containing string'
 - [ 2832790 ] Custom annotation filter

// -----------------------------------------------------------------------------

UCDetector 1.2.0 from 2009-07-21:
Bugfixes:
 - [ 2783734 ] Static imports are not recognized
 - [ 2787576 ] Waiting for first 10 markers
 - [ 2776029 ] Final for fields initialized in subclass constructors
 - [ 2808853 ] Don't create "0 references marker" for classes with main methods