@@ -4,6 +4,7 @@ Bugfixes:
  - [ 2968753 ] protected abstract method cannot be made private
  - [ 2986496 ] Marker don't disappear when deleting a complete line
  - [ 2996487 ] Applying quick fix scrolls page
+ - [ 2996965 ] Property 'File name pattern to search': Trim whitespaces, added default MANIFEST.MF
  
 
 New features:
